# starsector-build-optimizer

./: .env.example  .git-blame-ignore-revs  .gitignore  CLAUDE.md  pyproject.toml
.claude/skills/: README.md  cloud-worker-ops.md  ddd-tdd.md  design-invariants.md  doc-grooming.md  empirical-report.md  honest-evaluation.md  plan-lifecycle.md  plan-review.md  post-impl-audit.md  starsector-modding.md
.githooks/: pre-commit
.github/workflows/: manifest-check.yml
_research/phase7-featurized-matchup/: sources.txt
combat-harness/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
combat-harness/mod/: mod_info.json
data/phase7-prequential-replay/: headline_numbers.json
data/phase7-tail-walltime/: headline_numbers.json
data/wave1-comprehensive/: headline_numbers.json
data/wave1-trajectory/: headline_numbers.json
docs/: CONVENTIONS.md  project-overview.md  roadmap.md
docs/reference/: README.md  cross-domain-optimization-research.md  game-data-reference.md  game-mechanics.md  honest-evaluation-methodology.md  implementation-roadmap.md  literature-review.md  multi-fidelity-strategy.md  optimization-methods.md  optimization-theory.md  phase4-research-findings.md  phase5-signal-quality.md  phase5a-deconfounding-theory.md  phase5b-deconfounding-research.md  phase5b-opponent-curriculum.md  phase5c-opponent-curriculum.md  phase5d-covariate-adjustment.md  phase5e-shape-revision.md  phase5f-regime-segmented-optimization.md  phase6-cloud-worker-federation.md  phase6-deferred-audit-findings-2026-04-19.md  phase6-search-space-compression.md  phase7-featurized-matchup-surrogate.md  phase7-learned-surrogate-research.md  phase7-prep-relaunch-checklist-2026-04-19.md  phase7-search-space-compression.md  phase7-surrogate-methodology-gaps.md  phase7.5-infrastructure-reproducibility.md  problem-formulation.md  quality-diversity.md  skill-promotion-candidates.md  system-architecture.md  tech-debt.md  technical-debt.md  throughput-optimization.md
docs/reports/: 2026-04-19-phase6-deferred-audit.md  2026-04-19-phase7-prep-relaunch.md  2026-05-09-wave0-validation.md  2026-05-10-doc-reorg-summary.md  2026-05-10-posthoc-ranker-research.md  2026-05-10-v1-loadout-bug-invalidation.md  2026-05-10-validation-plan.md  2026-05-10-wave1-comprehensive-analysis.md  2026-05-10-wave1-honest-eval-live-preliminary.md  2026-05-10-wave1-honest-eval-stall-checkpoint.md  2026-05-10-wave1-optimization-trajectory.md  2026-05-10-wave1-validation.md  2026-05-10-wave2-validation.md  2026-05-11-phase7-matchup-surrogate-preliminary.md  2026-05-11-validation-to-phase7-roadmap.md  2026-05-11-wave1-honest-eval-final.md  2026-05-12-phase7-learned-surrogate-experiment.md  2026-05-14-phase7-v3-evidence-refresh.md  2026-05-16-phase7-seven-split-evidence.md  2026-07-11-aws-cost-analysis.md  2026-07-11-phase7-methodology-review.md  2026-07-12-phase7-adversarial-auc-evidence.md  2026-07-12-phase7-attempt3-surrogate-results.md  2026-07-12-phase7-batch-v2-incidents.md  2026-07-12-phase7-seed151-confirmatory.md  2026-07-12-phase7-tail-walltime.md  2026-07-12-quality-tooling-research.md  2026-07-13-roadmap-regroom.md  2026-07-14-accounting-stream-preregistration.md  2026-07-14-phase7-prequential-replay.md  2026-07-17-accounting-matchup-spread.md  2026-07-17-phase7-oracle-value-replay.md  INDEX.md
docs/specs/: 01-data-models.md  02-hullmod-effects.md  03-game-data-parser.md  04-search-space.md  05-repair-operator.md  06-heuristic-scorer.md  07-variant-generator.md  08-calibration-pipeline.md  09-combat-protocol.md  10-matchup-config.md  11-damage-tracker.md  12-result-writer.md  13-combat-harness-plugin.md  14-mod-skeleton.md  15-matchup-queue.md  16-menu-navigator.md  17-throughput-estimator.md  18-instance-manager.md  19-result-parser.md  20-curtailment-monitor.md  21-timeout-tuner.md  22-cloud-deployment.md  23-opponent-pool.md  24-optimizer.md  25-combat-fitness.md  26-parameter-importance.md  27-variant-builder.md  (+5 more)
examples/: accounting-hammerhead-rerun.yaml  accounting-hammerhead.yaml  accounting-wolf.yaml  phase7-learned-batch-ablation-b1.yaml  phase7-learned-batch-ablation-b2.yaml  phase7-learned-batch-ablation.yaml  phase7-learned-batch-smoke.yaml  phase7-learned-batch.yaml  phase7-prep-shakedown.yaml  phase7-prep.yaml  probe-campaign.yaml  smoke-campaign-multiworker.yaml  smoke-campaign.yaml  smoke-multi.yaml  wave1-c0a.yaml  wave1-c0b.yaml  wave1-c1.yaml  wave1-c2.yaml  wave1-c3.yaml  wave2-mid-warmstart.yaml  wave2-wolf-early.yaml
experiments/: INDEX.md
notebooks/: build_analysis.ipynb  phase5_effectiveness_2026-04-20.ipynb  phase7_prep_analysis_2026-04-20.ipynb  phase7_prep_postmortem.ipynb  trial_analysis.ipynb
scripts/: analyze_wave1.py  analyze_wave2.py  estimate_throughput.py  honest_eval_digest.py  migrate_wave1_eval_logs.py  post_wave1_automation.sh  post_wave2_automation.sh  run_optimizer.py  stop_optimizer.py  test_e2e_builds.py  test_instance_manager.py  test_optimizer_integration.py  test_persistent_session.py  test_robot_dismiss.py  update_manifest.py  validate_active_plans.py  validate_docs.py  validate_optimizer.py  wave1_status.py
tests/: conftest.py  test_accounting_extract.py  test_calibration.py  test_campaign.py  test_cloud_provider.py  test_cloud_userdata.py  test_cloud_worker_pool.py  test_combat_fitness.py  test_combat_harness_integration.py  test_curtailment.py  test_deconfounding.py  test_estimator.py  test_evaluator_pool.py  test_game_manifest.py  test_honest_evaluator.py  test_hullmod_effects.py  test_importance.py  test_instance_manager.py  test_integration.py  test_matchup_features.py  test_models.py  test_opponent_pool.py  test_optimizer.py  test_parser.py  test_phase7_baseline_surrogate.py  test_phase7_eval.py  test_phase7_learned_batch.py  test_phase7_learned_surrogate_experiment.py  test_phase7_matchup_data.py  test_phase7_prequential_replay.py  test_phase7_select_oracle_builds.py  test_posthoc_ranker.py  test_repair.py  test_result_parser.py  test_run_optimizer_cloud.py  test_scorer.py  test_search_space.py  test_shellcheck.py  test_timeout_tuner.py  test_validate_docs.py  (+3 more)
(+238 files in other folders)
