[project]
name = "starsector-optimizer"
version = "0.1.0"
description = "Automated ship build optimizer for Starsector"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35",
    "cmaes>=0.11.0",
    "flask>=3.0",
    "lifelines>=0.30.0",
    "numpy",
    "optunahub>=0.1.0",
    "optuna>=4.0.0",
    "pandas",
    "pandas-stubs~=2.3.3",
    "pyyaml>=6.0",
    "redis>=5.0",
    "requests>=2.31",
    "scikit-learn>=1.5.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fakeredis>=2.20",
    "ipykernel>=7.2.0",
    "moto>=5.0",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/starsector_optimizer"]
